# Babai-Graph-Isomorphism

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  action.cc  cameron.h  conanfile.txt  coset.cc  coset.h  datastructures.cc  datastructures.h  design_lemma.h  fhl.cc  group.cc  group.h  luks.cc  multi.h  permutation.cc  permutation.h  unionfind.h
action/: CMakeLists.txt
action/include/: action.h
action/src/: action.cc
catch2/: CMakeLists.txt
catch2/src/: catch2.cpp
coset/: CMakeLists.txt
coset/include/: coset.h
coset/src/: coset.cc
datastructures/: CMakeLists.txt
datastructures/include/: RelationStructureToVectors.h  RelationalStructureTextRepresentation.h  datastructures.h
datastructures/src/: RelationStructureToVectors.cpp  RelationalStructureTextRepresentation.cpp  datastructures.cc
datastructures/test/: datastructuresTest.cpp
design_lemma/: CMakeLists.txt
design_lemma/include/: design_lemma.h
design_lemma/src/: design_lemma.cc
design_lemma/test/: design_lemmaTest.cpp
examples/: CMakeLists.txt  babai_algorithm.cc  configurations.cc  cosets_and_pullbacks.cc  groups_and_permutations.cc  luks_algorithm.cc
examples/src/: babai_algorithm.cc  configurations.cc  cosets_and_pullbacks.cc  groups_and_permutations.cc  luks_algorithm.cc
examples/test/: luks_algorithm_test.cc
ext/: CMakeLists.txt
ext/include/: ext.h  matrix.h
ext/src/: ext.cc
fhl/: CMakeLists.txt
fhl/include/: fhl.h
fhl/src/: fhl.cc
group/: CMakeLists.txt
group/include/: group.h
group/src/: group.cc
luks/: CMakeLists.txt
luks/include/: luks.h
luks/src/: cameron.h  luks-test.cc  luks.cc
misc/: ext.cc  matrix.h
multi/: CMakeLists.txt
multi/include/: multi.h
multi/src/: multi.cc
permutation/: CMakeLists.txt
permutation/include/: permutation.h
permutation/src/: permutation.cc
unionfind/: CMakeLists.txt
unionfind/include/: unionfind.h
unionfind/src/: unionfind.cc
