cmake_minimum_required(VERSION 3.5)

if (MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

add_subdirectory(action)
add_subdirectory(coset)
add_subdirectory(datastructures)
add_subdirectory(design_lemma)
add_subdirectory(examples)
add_subdirectory(ext)
add_subdirectory(fhl)
add_subdirectory(group)
add_subdirectory(luks)
add_subdirectory(permutation)
add_subdirectory(unionfind)
add_subdirectory(multi)
